// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Row /> should match the snapshot (direction: 'column', noGutter: true, wrap: 'nowrap') 1`] = `
.c0 {
  display: -webkit-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical !important;
  -webkit-box-direction: normal !important;
  -ms-flex-direction: column !important;
  -webkit-flex-direction: column !important;
  -ms-flex-direction: column !important;
  flex-direction: column !important;
  margin-right: 0;
  margin-left: 0;
  -ms-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.c0 > .sc-bdVaJa {
  padding-right: 0;
  padding-left: 0;
}

<div
  className="c0"
  direction="column"
  wrap="nowrap"
/>
`;

exports[`<Row /> should match the snapshot (direction: 'row')  1`] = `
.c0 {
  display: -webkit-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: horizontal !important;
  -webkit-box-direction: normal !important;
  -ms-flex-direction: row !important;
  -webkit-flex-direction: row !important;
  -ms-flex-direction: row !important;
  flex-direction: row !important;
  margin-right: -15px;
  margin-left: -15px;
  -ms-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c0 > .sc-bdVaJa {
  padding-right: 15px;
  padding-left: 15px;
}

<div
  className="c0"
  direction="row"
/>
`;

exports[`<Row /> should match the snapshot (direction: { xs: 'row', sm: 'row-reverse', md: 'column' }) 1`] = `
.c0 {
  display: -webkit-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: horizontal !important;
  -webkit-box-direction: normal !important;
  -ms-flex-direction: row !important;
  -webkit-flex-direction: row !important;
  -ms-flex-direction: row !important;
  flex-direction: row !important;
  margin-right: -15px;
  margin-left: -15px;
  -ms-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c0 > .sc-bdVaJa {
  padding-right: 15px;
  padding-left: 15px;
}

@media (min-width:576px) {
  .c0 {
    -webkit-box-orient: horizontal !important;
    -webkit-box-direction: reverse !important;
    -ms-flex-direction: row-reverse !important;
    -webkit-flex-direction: row-reverse !important;
    -ms-flex-direction: row-reverse !important;
    flex-direction: row-reverse !important;
  }
}

@media (min-width:768px) {
  .c0 {
    -webkit-box-orient: vertical !important;
    -webkit-box-direction: normal !important;
    -ms-flex-direction: column !important;
    -webkit-flex-direction: column !important;
    -ms-flex-direction: column !important;
    flex-direction: column !important;
  }
}

<div
  className="c0"
  direction={
    Object {
      "md": "column",
      "sm": "row-reverse",
      "xs": "row",
    }
  }
/>
`;

exports[`<Row /> should match the snapshot (no properties set) 1`] = `
.c0 {
  display: -webkit-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-right: -15px;
  margin-left: -15px;
  -ms-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c0 > .sc-bdVaJa {
  padding-right: 15px;
  padding-left: 15px;
}

<div
  className="c0"
/>
`;

exports[`<Row /> should match the snapshot (noGutter: { xs: true, sm: false, md: true }) 1`] = `
.c0 {
  display: -webkit-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-right: 0;
  margin-left: 0;
  -ms-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c0 > .sc-bdVaJa {
  padding-right: 0;
  padding-left: 0;
}

@media (min-width:576px) {
  .c0 {
    margin-right: -15px;
    margin-left: -15px;
  }

  .c0 > .sc-bdVaJa {
    padding-right: 15px;
    padding-left: 15px;
  }
}

@media (min-width:768px) {
  .c0 {
    margin-right: 0;
    margin-left: 0;
  }

  .c0 > .sc-bdVaJa {
    padding-right: 0;
    padding-left: 0;
  }
}

<div
  className="c0"
/>
`;

exports[`<Row /> should match the snapshot (noGutter: true)  1`] = `
.c0 {
  display: -webkit-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-right: 0;
  margin-left: 0;
  -ms-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c0 > .sc-bdVaJa {
  padding-right: 0;
  padding-left: 0;
}

<div
  className="c0"
/>
`;

exports[`<Row /> should match the snapshot (wrap: 'wrap-reverse')  1`] = `
.c0 {
  display: -webkit-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-right: -15px;
  margin-left: -15px;
  -ms-flex-wrap: wrap-reverse;
  -webkit-flex-wrap: wrap-reverse;
  -ms-flex-wrap: wrap-reverse;
  flex-wrap: wrap-reverse;
}

.c0 > .sc-bdVaJa {
  padding-right: 15px;
  padding-left: 15px;
}

<div
  className="c0"
  wrap="wrap-reverse"
/>
`;

exports[`<Row /> should match the snapshot (wrap: { xs: 'nowrap', sm: 'wrap-reverse', md: 'wrap' }) 1`] = `
.c0 {
  display: -webkit-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-right: -15px;
  margin-left: -15px;
  -ms-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.c0 > .sc-bdVaJa {
  padding-right: 15px;
  padding-left: 15px;
}

@media (min-width:576px) {
  .c0 {
    -ms-flex-wrap: wrap-reverse;
    -webkit-flex-wrap: wrap-reverse;
    -ms-flex-wrap: wrap-reverse;
    flex-wrap: wrap-reverse;
  }
}

@media (min-width:768px) {
  .c0 {
    -ms-flex-wrap: wrap;
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
  }
}

<div
  className="c0"
  wrap={
    Object {
      "md": "wrap",
      "sm": "wrap-reverse",
      "xs": "nowrap",
    }
  }
/>
`;
